# play_dnd

./: .env  .gitignore  Cargo.toml
backend/: Cargo.toml
backend/queries/: character.sql
backend/src/: lib.rs  main.rs
backend/src/character/: character.rs
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js  test.js
frontend/src/character/: character.js
frontend/src/data/: character.json
queries/: attributes.sql  character.sql  weapon.sql
src/: lib.rs  main.rs
src/classes/: fighter.rs  mod.rs
