[package]
name = "play_dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.3.4", features = ["cors"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
rand = "0.8.5"
anyhow = "1.0.68"